--- a/SRS Project/SRS Project/SRS Project.vbproj
+++ b/SRS Project/SRS Project/SRS Project.vbproj
@@ -169,6 +169,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Controllers\HomeController.vb" />
+    <Compile Include="Views\IISHandler1.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
