--- a/SRS Project/SRS Project/SRS Project.vbproj
+++ b/SRS Project/SRS Project/SRS Project.vbproj
@@ -37,6 +37,7 @@
     <OutputPath>bin\</OutputPath>
     <DocumentationFile>SRS Project.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -153,6 +154,7 @@
     <Compile Include="Controllers\AdministrationController.vb" />
     <Compile Include="Controllers\AttendanceController.vb" />
     <Compile Include="Controllers\MaintenanceController.vb" />
+    <Compile Include="Controllers\PrivateMessageController.vb" />
     <Compile Include="Controllers\SharedController.vb" />
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
@@ -332,6 +334,7 @@
     <Content Include="Views\Attendance\_AdjustmentArrival.vbhtml" />
     <Content Include="Views\Attendance\_AttendanceRecord.vbhtml" />
     <Content Include="Views\Attendance\_DoorAccess.vbhtml" />
+    <Content Include="Views\PrivateMessage\Index.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
