--- a/mTime/mTime/Web.config
+++ b/mTime/mTime/Web.config
@@ -4,8 +4,7 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  
-  
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -55,10 +54,9 @@
     </compilers>
   </system.codedom>
 
-<connectionStrings>
-  <add name="mTimeEntities" connectionString="metadata=res://*/Models.mTime.csdl|res://*/Models.mTime.ssdl|res://*/Models.mTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FPM7EFQ\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  <!--<add name="HyperlinkDBContext" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
-  <add name="MasterDB" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
-</connectionStrings>
+  <connectionStrings>
+    <!--<add name="MasterDB" connectionString="metadata=res://*/Models.mTime.csdl|res://*/Models.mTime.ssdl|res://*/Models.mTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FPM7EFQ\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="HyperlinkDBContext" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="MasterDB" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
-
