--- a/mTime/mTime/Web.config
+++ b/mTime/mTime/Web.config
@@ -40,11 +40,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -54,4 +54,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="mTimeEntities" connectionString="metadata=res://*/Models.mTime.csdl|res://*/Models.mTime.ssdl|res://*/Models.mTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MasterDB" connectionString="metadata=res://*/Models.MasterDB.csdl|res://*/Models.MasterDB.ssdl|res://*/Models.MasterDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings>
+  <!--<add name="mTimeEntities" connectionString="metadata=res://*/Models.mTime.csdl|res://*/Models.mTime.ssdl|res://*/Models.mTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FPM7EFQ\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <!--<add name="HyperlinkDBContext" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
+  <add name="MasterDB" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
+</connectionStrings>
+</configuration>
