commit company + staff + department contoller

--- a/mTime/mTime/mTime.vbproj
+++ b/mTime/mTime/mTime.vbproj
@@ -176,6 +176,7 @@
     <Compile Include="App_Start\FilterConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
     <Compile Include="Controllers\AdministrationController.vb" />
+    <Compile Include="Controllers\CompanyController.vb" />
     <Compile Include="Controllers\DepartmentController.vb" />
     <Compile Include="Controllers\HyperlinkController.vb" />
     <Compile Include="Controllers\HolidayController.vb" />
@@ -183,9 +184,12 @@
     <Compile Include="Controllers\PoorAttendanceReasonController.vb" />
     <Compile Include="Controllers\AttendanceStatusController.vb" />
     <Compile Include="Controllers\SharedController.vb" />
+    <Compile Include="Controllers\StaffController.vb" />
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\StaffModel.vb" />
+    <Compile Include="Models\CompanyModel.vb" />
     <Compile Include="Models\DepartmentModel.vb" />
     <Compile Include="Models\MasterDB.vb" />
     <Compile Include="Models\HyperlinkModel.vb" />
@@ -377,6 +381,7 @@
     <Content Include="Views\PrivateMessage\Index.vbhtml" />
     <Content Include="Views\FAQ\Index.vbhtml" />
     <Content Include="Views\Department\Create.vbhtml" />
+    <Content Include="Views\Staff\Create.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
@@ -411,7 +416,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\_ViewStart.vbhtml" />
     <Content Include="Views\Home\Index.vbhtml" />
     <Content Include="Views\Shared\Error.vbhtml" />
     <Content Include="Views\Shared\_Layout.vbhtml" />
