--- a/mTime/mTime/mTime.vbproj
+++ b/mTime/mTime/mTime.vbproj
@@ -175,6 +175,8 @@
     <Compile Include="App_Start\BundleConfig.vb" />
     <Compile Include="App_Start\FilterConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
+    <Compile Include="Controllers\AboutUsController.vb" />
+    <Compile Include="Controllers\AdminFAQController.vb" />
     <Compile Include="Controllers\AdministrationController.vb" />
     <Compile Include="Controllers\CompanyController.vb" />
     <Compile Include="Controllers\AttendanceController.vb" />
@@ -277,7 +279,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="packages.config" />
+    <Content Include="img\company_logo.jpg" />
     <Content Include="img\htr_bg.jpg" />
+    <Content Include="img\ht_img1.png" />
     <Content Include="img\malaysia_logo.png" />
     <Content Include="img\malaysia_logo_s.png" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
@@ -519,6 +523,8 @@
     <Content Include="Views\Report\_ByEmployee.vbhtml" />
     <Content Include="Views\Report\_ByDepartment.vbhtml" />
     <Content Include="Views\Report\_Analysis.vbhtml" />
+    <Content Include="Views\AdminFAQ\Index.vbhtml" />
+    <Content Include="Views\AboutUs\Index.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
