--- a/mTime/mTime/Web.config
+++ b/mTime/mTime/Web.config
@@ -58,8 +58,8 @@
   <connectionStrings>
     <!--<add name="mTimeEntities" connectionString="metadata=res://*/Models.mTime.csdl|res://*/Models.mTime.ssdl|res://*/Models.mTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FPM7EFQ\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="HyperlinkDBContext" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="MasterDB" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="MasterDB" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
     <!--<add name="MasterDB" connectionString="Data Source=DESKTOP-UBVDK6O\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <add name="MasterDB" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="MasterDB" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
